# stock-predictor

./: .gitignore  README.md  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: main.jsx
frontend/src/api/: config.js  history.js  predict.js  stocks.js
frontend/src/components/: Modal.jsx  PredictPanel.jsx  PriceChart.jsx  RangeSelector.jsx  StockCard.jsx
frontend/src/constants/: ranges.js
frontend/src/pages/: Home.jsx
frontend/src/styles/: chart.css  global.css  modal.css  predict.css  stocks.css
ml/: __init__.py
ml/baselines/: __init__.py
ml/data/: __init__.py  create_dataset.py  data_loader.py  feature_engineer.py  get_stock_data.py  scaler_utils.py  split_merger.py  target_builder.py  window_builder.py
ml/data/datasets/long/: y_test.npy  y_train.npy  y_val.npy
ml/data/datasets/medium/: y_test.npy  y_train.npy  y_val.npy
ml/data/datasets/short/: X_test.npy  (+4 more)
scripts/: setup_project.ps1
server/: __init__.py  requirements.txt
server/backend/: __init__.py  settings.py  urls.py
server/ml/: __init__.py
server/ml/baselines/: __init__.py  linear_regression_baseline.py  metrics.py  zero_baseline.py
server/ml/data/: __init__.py  create_dataset.py  data_loader.py  feature_engineer.py  get_stock_data.py  scaler_utils.py  splitter.py
server/ml/training/: __init__.py  lstm.py  train_lstm.py
server/predictions/: models.py  serializers.py  tests.py  urls.py  views.py
server/predictions/migrations/: 0001_initial.py
server/predictions/services/: feature_builder.py  fetch_data.py  inference.py  market_data.py
(+7 files in other folders)
